Adds game histories controller
- Introduces bullet gem to detect N+1s
